Мелкие правки в аннотациях